# dwg2dxf

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.front.md
.github/workflows/: lint_and_fmt.yml
src/: __init__.py  example.py
test/: test_example.py
