[tool.poetry]
name = "poetry-sample"
version = "0.1.0"
description = ""
authors = ["oucyz <dks.9886.po@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
pyproject-flake8 = "^6.0.0.post1"
pydantic = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = "src:hello"

[tool.black]
max-line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
exclude = ["build"]
plugins = [
    "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.flake8]
ignore = "D203,W605,E501,W503,E203,C901"
exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,.venv,env"
max-complexity = 10
max-line-length = 79
